[metadata]
name = ezaero
description = Aerodynamics in Python.
long_description = file: README.rst
version = file: VERSION
license = MIT
author = Pedro Arturo Morales Maries
author_email = part.morales@gmail.com
keywords =
    aero
    aerospace
    engineering
    aerodynamics
    vlm
url = https://github.com/partmor/ezaero
download_url = https://github.com/partmor/ezaero
project_urls =
    Source=https://github.com/partmor/ezaero
    Tracker=https://github.com/partmor/ezaero/issues
platforms = any
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
package_dir=
    =src
packages = find:
zip_safe = False
python_requires = >=3.5,<3.8
install_requires =
    matplotlib>=2.0
    numpy
include_package_data = True

[options.packages.find]
where = src

[options.extras_require]
dev =
    flake8
    isort
    pytest
    sphinx
    sphinx-gallery
    sphinx_rtd_theme
    tox
docs =
    sphinx
    sphinx-gallery
    sphinx_rtd_theme

[tool:pytest]
norecursedirs =
    .git
    .tox
    dist
    env
    build
    venv
addopts = --verbose

# `known_first_party` and `default_section` as defined
# is required to overcome inconsistencies on travis results
# e.g. https://github.com/timothycrosley/isort/issues/457#issuecomment-304261570
[isort]
# explicitly enforce `ezaero` as first party
known_first_party = ezaero
# The default section to place imports in,
# if their section can not be automatically determined
default_section = THIRDPARTY
